--- a/Frontend/templates/all_products.html
+++ b/Frontend/templates/all_products.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+
     <h1>All Products Page</h1>
     <h2><a href={% url 'add_product' %}>Add Product</a></h2>
 
@@ -21,6 +22,7 @@
             <th>Price</th>
             <th>Gst</th>
             <th>Food Product</th>
+            <th>Picture</th>
             <th>Edit</th>
             <th>Remove</th>
         </tr>
@@ -33,14 +35,14 @@
             <td>{{product.food_product}}</td>
             <td>
                 {% if product.picture %}
-                <img src="{{product.picture.url}}" alt="mobile" width="200px" height="200px">
+                <img src="{{ product.picture.url }}" alt="mobile" width="250px" height="250px">
                 <!-- {{product.picture}} -->
                 {% else %}
                 No Picture
                 {% endif %}
             </td>
-            <td><a href="">Update</a></td>
-            <td><a href="">Delete</a></td>
+            <td><a href="{% url 'edit_product' product.id  %}">Update</a></td>
+            <td><a href="{% url 'delete_product' product.id  %}">Delete</a></td>
         </tr>
         {% endfor %}
     </table>
