--- a/Frontend/templates/All_Customers.html
+++ b/Frontend/templates/All_Customers.html
@@ -1,20 +1,17 @@
-{% load static %}
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customers List</title>
-    <link rel="stylesheet" href="{% static 'css/customer.css' %}">
-</head>
+<h1 class="text-center text-warning fs-1 m-3">Customers List</h1>
 
-<body>
-    <h1>Customers Page</h1>
-    <a href="{% url 'add_customers' %}">Add Customers</a>
-    <table>
-        <tr>
+<div class="container">
+    <a class="btn btn-info fs-4 float-end m-4 bg-primary text-light fw-bold" href="{% url 'add_customers' %}">Add
+        Customers</a>
+</div>
+
+<div class="container">
+    <table class="table table-dark text-center">
+        <tr class="text-primary">
             <th>Customer Name</th>
             <th>Customer Since</th>
             <th>Edit</th>
@@ -24,11 +21,11 @@
         <tr>
             <td>{{customer.customer_name}}</td>
             <td>{{customer.customer_since}}</td>
-            <td><a href="{% url 'edit_customers' customer.id  %}">Update</a></td>
-            <td><a href="{% url 'delete_customers' customer.id  %}">Delete</a></td>
+            <td><a class="btn btn-warning" href="{% url 'edit_customers' customer.id  %}">Update</a></td>
+            <td><a class="btn btn-danger" href="{% url 'delete_customers' customer.id  %}">Delete</a></td>
         </tr>
         {% endfor %}
     </table>
-</body>
+</div>
 
-</html>
+{% endblock %}
