--- a/Frontend/templates/All_Orders.html
+++ b/Frontend/templates/All_Orders.html
@@ -1,22 +1,14 @@
-{% load static %}
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
+{% block content %}
+<h1 class="text-center text-warning fs-1 m-3">Orders Data</h1>
+<div class="container">
+    <a class="btn btn-info fs-4 float-end m-4 bg-primary text-light fw-bold" href="{% url 'add_orders' %}">Add Order</a>
+</div>
 
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'css/customer.css' %}">
-</head>
-
-<body>
-    <h1>Orders Data</h1>
-    <a href="{% url 'add_orders' %}">Add Orders</a>
-
-    <table>
-        <tr>
+<div class="container">
+    <table class="table table-dark text-center">
+        <tr class="text-primary">
             <th>Customer</th>
             <th>Product</th>
             <th>Order No</th>
@@ -39,13 +31,12 @@
             <td>{{order.amount}}</td>
             <td>{{order.gst_amount}}</td>
             <td>{{order.bill_amount}}</td>
-            <td><a href="{% url 'edit_orders' order.id %}">Edit</a></td>
-            <td><a href="{% url 'delete_orders' order.id %}">Delete</a></td>
+            <td><a class="btn btn-warning" href="{% url 'edit_orders' order.id %}">Edit</a></td>
+            <td><a class="btn btn-danger" href="{% url 'delete_orders' order.id %}">Delete</a></td>
         </tr>
         {% endfor %}
     </table>
 
+</div>
 
-</body>
-
-</html>
+{% endblock %}
