--- a/Frontend/templates/all_products.html
+++ b/Frontend/templates/all_products.html
@@ -1,22 +1,17 @@
-{% load static %}
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block content %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products List</title>
-    <link rel="stylesheet" href="{% static 'css/product.css' %}">
-</head>
+<h1 class="text-center text-warning fs-1 m-3">Products List</h1>
+<div class="container">
+    <h2><a class="btn btn-info fs-4 float-end m-4 text-light bg-primary fw-bold" href={% url 'add_product' %}>Add
+            Product</a>
+    </h2>
+</div>
 
-<body>
-
-    <h1>All Products Page</h1>
-    <h2><a href={% url 'add_product' %}>Add Product</a></h2>
-
-    <table>
-        <tr>
+<div class="container">
+    <table class="table table-dark text-center">
+        <tr class="text-primary">
             <th>Product name</th>
             <th>Product Code</th>
             <th>Price</th>
@@ -41,11 +36,11 @@
                 No Picture
                 {% endif %}
             </td>
-            <td><a href="{% url 'edit_product' product.id  %}">Update</a></td>
-            <td><a href="{% url 'delete_product' product.id  %}">Delete</a></td>
+            <td><a class="btn btn-warning" href="{% url 'edit_product' product.id  %}">Update</a></td>
+            <td><a class="btn btn-danger" href="{% url 'delete_product' product.id  %}">Delete</a></td>
         </tr>
         {% endfor %}
     </table>
-</body>
+</div>
 
-</html>
+{% endblock %}
