--- a/Frontend/templates/edit_product.html
+++ b/Frontend/templates/edit_product.html
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Page</title>
-</head>
-
-<body>
-    <h1>Products Edit Page</h1>
-    <h2><a href={% url 'all_products' %}>Back</a></h2>
+{% extends 'base.html' %}
+{% block content %}
+<h1 class="text-center fs-1  m-3 text-warning">Edit Product</h1>
+<div class="container">
+    <a class="btn btn-info fs-4 float-end m-4 bg-primary text-light fw-bold" href={% url 'all_products' %}>Back</a>
+</div>
+<br><br><br>
+<div class="container text-light">
     <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ product_form }}
         <br>
         <br>
-        <input type="submit" value="Update Product">
+        <input class="btn btn-primary" type="submit" value="Update Product">
     </form>
-</body>
+</div>
 
-</html>
+{% endblock %}
