--- a/Frontend/templates/navbar.html
+++ b/Frontend/templates/navbar.html
@@ -21,7 +21,7 @@
                     <a class="nav-link active text-light" href="#" tabindex="-1">Create User</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active text-light" href="#" tabindex="-1">Logout</a>
+                    <a class="nav-link active text-light" href="{% url 'logout' %}" tabindex="-1">Logout</a>
                 </li>
             </ul>
         </div>
