--- a/Frontend/templates/All_Customers.html
+++ b/Frontend/templates/All_Customers.html
@@ -4,25 +4,33 @@
 
 <h1 class="text-center text-warning fs-1 m-3">Customers List</h1>
 
+{% if request.user.role == 0 or request.user.role == 1 %}
 <div class="container">
     <a class="btn btn-info fs-4 float-end m-4 bg-primary text-light fw-bold" href="{% url 'add_customers' %}">Add
         Customers</a>
 </div>
+{% endif %}
 
 <div class="container">
     <table class="table table-dark text-center">
         <tr class="text-primary">
             <th>Customer Name</th>
             <th>Customer Since</th>
+            {% if request.user.role == 0 or request.user.role == 1 %}
             <th>Edit</th>
             <th>Remove</th>
+            {% endif %}
         </tr>
         {% for customer in customers %}
         <tr>
             <td>{{customer.customer_name}}</td>
             <td>{{customer.customer_since}}</td>
+
+            {% if request.user.role == 0 or request.user.role == 1 %}
             <td><a class="btn btn-warning" href="{% url 'edit_customers' customer.id  %}">Update</a></td>
             <td><a class="btn btn-danger" href="{% url 'delete_customers' customer.id  %}">Delete</a></td>
+            {% endif %}
+
         </tr>
         {% endfor %}
     </table>
