--- a/Frontend/templates/All_Orders.html
+++ b/Frontend/templates/All_Orders.html
@@ -18,7 +18,9 @@
             <th>GST</th>
             <th>Bill Amount</th>
             <th>Update</th>
+            {% if request.user.role == 0 or request.user.role == 1 %}
             <th>Remove</th>
+            {% endif %}
         </tr>
 
         {% for order in orders %}
@@ -32,7 +34,10 @@
             <td>{{order.gst_amount}}</td>
             <td>{{order.bill_amount}}</td>
             <td><a class="btn btn-warning" href="{% url 'edit_orders' order.id %}">Edit</a></td>
+
+            {% if request.user.role == 0 or request.user.role == 1 %}
             <td><a class="btn btn-danger" href="{% url 'delete_orders' order.id %}">Delete</a></td>
+            {% endif %}
         </tr>
         {% endfor %}
     </table>
